exports[`DropMenu [common] example testing should match snapshot(s) for 1.basic 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-6">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        Select
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 2.button-menu 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-7">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          onClick={[Function]}
          type="button">
          Select Color
        </Button>
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-8">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control">
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button">
          Select Color
        </Button>
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 4.disabled-options 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-9">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          onClick={[Function]}
          type="button">
          Select Color
        </Button>
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-disabled"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-disabled"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 5.grouped-options 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-10">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          onClick={[Function]}
          type="button">
          Select Color
        </Button>
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Select Color
        </div>
        <div
          className="lucid-DropMenu-OptionGroup-divider" />
        <div
          className="lucid-DropMenu-label">
          Screen
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
        <div
          className="lucid-DropMenu-OptionGroup-divider" />
        <div
          className="lucid-DropMenu-label">
          Print
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Cyan
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Yellow
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Magenta
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Black
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 6.text-menu 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-11">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        <TextField
          debounceLevel={500}
          isDisabled={false}
          isMultiLine={false}
          lazyLevel={1000}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeDebounced={[Function]}
          onSubmit={[Function]}
          placeholder="Text DropMenu"
          rows={5}
          style={null} />
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 7.action-menu 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={false}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-12">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        Colors
        <CaretIcon
          direction="down"
          viewBox="0 3 16 8" />
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;

exports[`DropMenu [common] example testing should match snapshot(s) for 8.stateless 1`] = `
<div
  className="lucid-DropMenu lucid-DropMenu-base lucid-DropMenu-is-expanded lucid-DropMenu-direction-down">
  <ContextMenu
    alignment="start"
    direction="down"
    directonOffset={0}
    getAlignmentOffset={[Function]}
    isExpanded={true}
    onClickOut={[Function]}
    portalId="DropMenu-Portal-13">
    <ContextMenu.Target
      elementType="span">
      <div
        className="lucid-DropMenu-Control"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          onClick={[Function]}
          type="button">
          Select Color
        </Button>
      </div>
    </ContextMenu.Target>
    <ContextMenu.FlyOut
      className="lucid-DropMenu"
      style={
        Object {
          "maxHeight": "18em",
        }
      }>
      <div
        className="lucid-DropMenu-option-container"
        style={
          Object {
            "maxHeight": "18em",
          }
        }>
        <div
          className="lucid-DropMenu-label">
          Preferred
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped lucid-DropMenu-Option-is-selected"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Red
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Green
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-grouped"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Blue
        </div>
        <div
          className="lucid-DropMenu-OptionGroup-divider" />
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-focused"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Orange
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-disabled"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Violet
        </div>
        <div
          className="lucid-DropMenu-Option lucid-DropMenu-Option-is-disabled"
          onClick={[Function]}
          onMouseMove={[Function]}>
          Brown
        </div>
      </div>
    </ContextMenu.FlyOut>
  </ContextMenu>
</div>
`;
